Revert "format cell"
This reverts commit 38b42e695ea03033bf5d0835d5b8cd2c84a40738.

--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Re-organize the files\n",
+    "# Reorganize the files\n",
     "\n",
     "This is a typically data alignment problem:\n",
     "\n",
@@ -25,7 +25,8 @@
     "cwd = os.getcwd()\n",
     "data_path = os.path.join(cwd, 'data')\n",
     "cnt = 1\n",
-    "label_text, outlier = [], []\n",
+    "label_text = []\n",
+    "outlier = []\n",
     "\n",
     "for folder in os.listdir(data_path):\n",
     "    if folder == '.DS_Store':\n",
@@ -39,18 +40,15 @@
     "    fname_pattern = '(?<=^).+jpg(?=\\\\t)'\n",
     "    for i in range(len(f)):\n",
     "        # file name format, `t_00XXXX.jpg`\n",
-    "        new_file_name = 't_{0:{fill}{align}6}.jpg'.format(cnt,\n",
-    "                                                          fill='>',\n",
-    "                                                          align=0)\n",
+    "        new_file_name = 't_{0:{fill}{align}6}.jpg'.format(cnt, fill = '>', align = 0)\n",
     "        old_file_name = re.match(fname_pattern, f[i])[0].split('/')[1]\n",
     "        f[i] = re.sub(fname_pattern, new_file_name, f[i])\n",
     "        try:\n",
-    "            os.rename(os.path.join(folder_path, old_file_name),\n",
-    "                      os.path.join(data_path, new_file_name))\n",
+    "            os.rename(os.path.join(folder_path, old_file_name), os.path.join(data_path,new_file_name))\n",
     "            cnt += 1\n",
     "        except:\n",
     "            outlier.append(old_file_name + '\\n')\n",
-    "\n",
+    "    \n",
     "    with open(label_path, 'w') as file:\n",
     "        file.writelines(f)\n",
     "        label_text.extend(f)\n",
@@ -86,7 +84,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f93ffd0bc97525f0732560aaa977f477ebcbe5f59566348c6a28d6993ba0a9d6"
+    "hash": "afb4adc4467ccd601704e8f58cc4c5f7d40faddd5ef11929d9d152cab736240e"
    }
   }
  },
